# django-admin-env-badge

./: README.md  pyproject.toml
src/: context_processor.py
src/django_admin_env_badge/: apps.py  context_processors.py
src/django_admin_env_badge/templates/admin/: base_site.html
src/templates/admin/: base_site.html
test_env_project/: db.sqlite3
test_env_project/core/: settings.py
