[project]
name = "django-admin-env-badge"
version = "0.1.0"
description = "Visual environment indicators for the Django admin header to distinguish Local, Dev, Stage, and Production."
readme = "README.md"
license = "MIT"
authors = [{ name = "Moataz Fawzy", email = "motazfawzy73@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.1",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/Moataz0000/django-admin-env-badge"
Repository = "https://github.com/Moataz0000/django-admin-env-badge"
Issues = "https://github.com/Moataz0000/django-admin-env-badge/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = ["test_env_project", ".venv"]

[dependency-groups]
dev = [
    "build>=1.4.0",
    "twine>=6.2.0",
]
